--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
 	},
 	"dependencies": {
 		"autoprefixer": "10.4.14",
+		"axios": "^1.4.0",
 		"eslint": "8.44.0",
 		"eslint-config-next": "13.4.9",
 		"flowbite": "^1.7.0",
 		"flowbite-react": "^0.4.10",
+		"mongodb": "^5.7.0",
+		"mongoose": "^7.3.2",
 		"next": "13.4.9",
 		"postcss": "8.4.25",
 		"react": "18.2.0",
 		"react-confetti-explosion": "^2.1.2",
 		"react-dom": "18.2.0",
 		"react-slot-counter": "^1.11.0",
-		"tailwindcss": "3.3.2"
+		"react-toastify": "^9.1.3",
+		"tailwindcss": "3.3.2",
+		"zod": "^3.21.4"
 	}
 }
